// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`qweb t-att t-att-class with multiple classes 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"test\\"
    let utils = this.constructor.utils;
    let scope = Object.create(context);
    let h = this.h;
    let _1 = utils.toClassObj({'a b c':scope['value']});
    let c2 = [], p2 = {key:2,class:_1};
    let vn2 = h('div', p2, c2);
    return vn2;
}"
`;

exports[`qweb t-att t-att-class with multiple classes 2`] = `
"function anonymous(context, extra
) {
    // Template name: \\"test\\"
    let utils = this.constructor.utils;
    let scope = Object.create(context);
    let h = this.h;
    let _3 = utils.toClassObj({['a b c']:scope['value']});
    let c4 = [], p4 = {key:4,class:_3};
    let vn4 = h('div', p4, c4);
    return vn4;
}"
`;

exports[`qweb t-att t-att-class with multiple classes, some of which are duplicate 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"test\\"
    let utils = this.constructor.utils;
    let scope = Object.create(context);
    let h = this.h;
    let _1 = utils.toClassObj({'a b c':scope['value'],'a b d':!scope['value']});
    let c2 = [], p2 = {key:2,class:_1};
    let vn2 = h('div', p2, c2);
    return vn2;
}"
`;

exports[`qweb t-att t-att-class with multiple classes, some of which are duplicate 2`] = `
"function anonymous(context, extra
) {
    // Template name: \\"test\\"
    let utils = this.constructor.utils;
    let scope = Object.create(context);
    let h = this.h;
    let _3 = utils.toClassObj({'a b c':scope['value'],'a b d':!scope['value']});
    let c4 = [], p4 = {key:4,class:_3};
    let vn4 = h('div', p4, c4);
    return vn4;
}"
`;
